[gd_scene load_steps=3 format=3 uid="uid://dpr200txdkh4p"]

[ext_resource type="Script" path="res://NodeChat/WebFileSys/script/file_mono.gd" id="1_jm1s8"]

[sub_resource type="LabelSettings" id="LabelSettings_34qnv"]
font_size = 30
font_color = Color(0, 0, 0, 1)

[node name="FileMono" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -549.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jm1s8")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 10.0
text = "节点集合名字"
label_settings = SubResource("LabelSettings_34qnv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
text = "作者"
label_settings = SubResource("LabelSettings_34qnv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Label2"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="mes" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "！信息"

[node name="download" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "⬇下载"

[node name="delete" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "X删除"

[connection signal="pressed" from="mes" to="." method="_on_mes_pressed"]
[connection signal="pressed" from="download" to="." method="_on_download_pressed"]
[connection signal="pressed" from="delete" to="." method="_on_delete_pressed"]
